# polars_whichlang

./: .gitignore  CHANGELOG.md  Cargo.toml  Makefile  README.md  noxfile.py  pyproject.toml  requirements.txt  run.py
.github/workflows/: build.yml  pypi.yml  test.yml
polars_whichlang/: __init__.py
src/: lib.rs
tests/: test_pig_latinnify.py  test_whichlang.py
