[package]
name = "polars-whichlang"
version = "0.1.0"
edition = "2024"

[lib]
name = "polars_whichlang"
crate-type= ["cdylib"]

[dependencies]
pyo3 = { version = "0.25", features = ["extension-module", "abi3-py39"] }
pyo3-polars = { version = "0.24", features = ["derive"] }
polars = { version = "0.51", default-features = false, features = ["dtype-struct", "dtype-array"]}
polars-arrow = { version = "0.51", default-features = true }
whichlang = { version = "0.1.1" }
