[build-system]
requires = ["maturin>=1.0,<2.0", "polars>=1.3.0"]
build-backend = "maturin"

[project]
name = "polars-whichlang"
version = "0.1.0"
description = "Language identification plugin for polars"
requires-python = ">=3.10"
authors = [
  {name = "Rob Malouf", email="rmalouf@sdsu.edu"}
]
readme = "README.md"
license = "MIT"
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Rust",
  "Programming Language :: Python",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Scientific/Engineering :: Information Analysis",
  "Topic :: Text Processing",
  "Topic :: Text Processing :: General",
  "Topic :: Text Processing :: Linguistic",
  "Typing :: Typed",
  ]
  dependencies = [
    "polars>=1.3.0"
  ]

[project.urls]
repository = "https://github.com/rmalouf/polars_whichlang"

[tool.maturin]
module-name = "polars_whichlang._internal"

